--- a/styles.css
+++ b/styles.css
@@ -187,3 +187,12 @@ body {
     padding-right: 20px;
     padding-left: 20px;
 }
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    background-color: #1F2937;
+    color: white;
+}
